# solitaire

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  benchmark_pruning.py  plan.tex  pyproject.toml
.github/instructions/: project-conventions.instructions.md
benchmarks/cpp/: benchmark_completeDFS.cpp  benchmark_move_generation.cpp  benchmark_pruning.cpp
bindings/: module.cpp
docs/: pruning_strategies.md  python_api.md  solver_guide.md
include/solitaire/: constants.h  game_state.h  shuffle.h  types.h
include/solitaire/solvers/: complete_dfs.h  greedy_policy.h  policy_template.h  pruning.h  random_policy.h  solver.h
include/solitaire/util/: board_equivalence.h  move_analysis.h  move_equivalence.h  move_notation.h
python/solitaire/: __init__.py
python/solitaire/ui/: __init__.py  cli.py  main.py
python_ui/: __init__.py  cli.py
solitaire/: __init__.py
src/solitaire/: game_state.cpp  shuffle.cpp  types.cpp
src/solitaire/solvers/: complete_dfs.cpp  greedy_policy.cpp  pruning.cpp  random_policy.cpp  solver.cpp
src/solitaire/util/: board_equivalence.cpp  move_analysis.cpp  move_equivalence.cpp  move_notation.cpp
tests/cpp/: test_board_equivalence.cpp  test_complete_dfs.cpp  test_game_rules.cpp  test_move_analysis.cpp  test_move_equivalence.cpp  test_move_notation.cpp  test_policies.cpp  test_pruning.cpp  test_state_invariants.cpp
tests/python/: conftest.py  test_python_api.py
