[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "solitaire"
version = "0.1.0"
description = "Fast C++ solitaire solver library with Python bindings"
authors = [{name = "Simon Rothman"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = []

[project.scripts]
solitaire-ui = "python_ui.cli:main"

[project.optional-dependencies]
dev = ["pytest", "black", "flake8", "mypy"]

[tool.scikit-build]
cmake.minimum-version = "3.24"
cmake.build-type = "Release"

[tool.scikit-build.cmake.define]
BUILD_TESTS = "OFF"
BUILD_PYTHON = "ON"

[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = "test_*.py"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
